syntax = "proto3";
import "google/protobuf/empty.proto";
option  go_package = "./;proto";

service User{
  rpc GetUserList(PageInfo) returns (UserListResponse); //用户列表
  rpc GetUserByMobile(mobileRequest) returns (UserInfoResponse); // 通过手机号查询用户;
  rpc GetUserByID(IDRequest) returns (UserInfoResponse); // 通过手机号查询用户;
  rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 通过手机号查询用户;
  rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // 更改用户信息;
  rpc CheckUser(PasswordCheckInfo) returns (CheckResponse); // 更改用户信息;
}



message mobileRequest{
  string mobile = 1;
}

message IDRequest{
  int32 id = 1;
}

message PageInfo {
  uint32 pn = 1;
  uint32 pSize = 2;
}

message PasswordCheckInfo{
  string password = 1;
  string encryptedPassword = 2;
}

message CreateUserInfo{
  string nickName = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo{
  int32 id = 1;
  string nickName = 2;
  string gender = 3;
  uint64 brithDay = 4;
}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 brithDay = 5;
  string gender = 6;
  uint32 role = 7;
}

message UserListResponse{
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}

message CheckResponse{
  bool success=1;
}